@@ -379,13 +379,13 @@ let compile fold_case re =
       let lbl = !progpos in
       patch_instr pos_pushback op_PUSHBACK lbl
   | Group(n, r) ->
-      if n >= 32 then failwith "too many \\(...\\) groups";
       emit_instr op_BEGGROUP n;
       emit_code r;
       emit_instr op_ENDGROUP n;
       numgroups := max !numgroups (n+1)
   | Refgroup n ->
-      emit_instr op_REFGROUP n
+      emit_instr op_REFGROUP n;
+      numgroups := max !numgroups (n+1)
   | Bol ->
       emit_instr op_BOL 0
   | Eol ->
@@ -518,12 +518,10 @@ let parse s =
           assert false
       | '(' ->
           let group_no = !group_counter in
-          if group_no < 32 then incr group_counter;
+          incr group_counter;
           let (r, j) = regexp0 (i+1) in
           if j + 1 < len && s.[j] = '\\' && s.[j+1] = ')' then
-            if group_no < 32
-            then (Group(group_no, r), j + 2)
-            else (r, j + 2)
+            (Group(group_no, r), j + 2)
           else
             failwith "\\( group not closed by \\)"
       | '1' .. '9' as c ->
